// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelsList renders the component channels 1`] = `
<app-channels-list-stub
  channels="[object Object],[object Object],[object Object]"
/>
`;

exports[`ChannelsList renders the component with no channels 1`] = `
<app-channels-list-stub
  channels=""
/>
`;
